Created new Crate model since old one wouldn't import to unity properly

--- a/Model Import Testing/Assembly-CSharp.csproj
+++ b/Model Import Testing/Assembly-CSharp.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerManager.cs" />
-    <Compile Include="Assets\UIManager.cs" />
+    <Compile Include="Assets\Scripts\UIManager.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Project/Project Repository/Model Import Testing/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
